Add Startup.BrowserMessageLoopStart.To.NonEmptyPaint2 metric.

This measures the time between Startup.BrowserMessageLoopStartTime
being logged and Startup.FirstWebContents.NonEmptyPaint2 being logged.

Also adds Startup.BrowserMessageLoopStart.To.MainNavigationStart.

Goal is to be able to easier diagnose problems and also understand impact
of improvements. For example, I plan to use this when I do more experimentation
with my resource reordering change.

BUG=634437

Review-Url: https://codereview.chromium.org/2870993002
Cr-Commit-Position: refs/heads/master@{#470573}

Former-commit-id: d80d9426357c72cc7d547d84196890efb999be36